# audiobook

./: Dockerfile  cloudbuild.yaml  requirements.txt
audiobook_service/: agent.py  file_parser.py  main.py  pyproject.toml
